// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleCollapse Should render multiple children as expected 1`] = `
<div>
  <div
    class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0"
  >
    <h2
      class="w-full text-2xl"
    >
      This is the body
    </h2>
    <div
      class="mr-4"
    >
      something else
    </div>
  </div>
</div>
`;

exports[`SimpleCollapse Should render single child as expected 1`] = `
<div>
  <div
    class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0"
  >
    <h2
      class="w-full text-2xl"
    >
      This is the body
    </h2>
  </div>
</div>
`;
